# echolib

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_16_2.7  LICENSE  README.md  camera.dockerfile  echolib-config.cmake.in  old.dockerfile
debian/: changelog  control  echolib-daemon.install  echolib-dev.install  python-echolib.install  python3-echolib.install  rules
docker/: Dockerfile
docs/: Makefile  advanced_concepts.rst  conf.py  for_developers.rst  getting_started_cpp.rst  getting_started_py.rst  index.rst  installation.rst  intro.rst  make.bat
include/echolib/: array.h  camera.h  client.h  datatypes.h  helpers.h  loop.h  message.h  routing.h  server.h
python/: setup.py  tests.py
python/echolib/: __init__.py  __main__.py  array.py  camera.py  ignition.py  tornado.py
python/echolib/messages/: __init__.py  __main__.py  cli.py  syntax.py
python/echolib/messages/templates/: __init__.py  cpp.tpl  python.tpl
python/examples/: camera.py  chat.py  video.py
python/tests/: tensor.py
src/: algorithms.h  array.cpp  client.cpp  client.h  daemon.cpp  datatypes.cpp  datatypes.h  debug.cpp  debug.h  helpers.h  loop.cpp  loop.h  message.cpp  message.h  python.cpp  routing.cpp  routing.h  server.cpp  server.h
src/apps/: cameraserver.cpp  imageserver.cpp  router.cpp  videoclient.cpp  videoserver.cpp
src/examples/: chat.cpp  chat.py  chat_internet.cpp  chunked.cpp  opencv.cpp
src/python/: wrapper.cpp
src/tests/: deadend.cpp  dynamic_client.cpp  tensor.cpp
tests/python2/: run.sh  script.py
